--- a/public/login.html
+++ b/public/login.html
@@ -7,7 +7,7 @@
 <body>
     <h1>로그인</h1>
     <br>
-    <form method="POST">
+    <form method="POST" action="/process/login">
         <table>
             <tr>
                 <td><label>아이디</label></td>
